# rs-netty

./: .gitignore  Cargo.toml  README.md
benchmarks/: .gitignore  README.md  run.py
benchmarks/netty/: README.md  pom.xml
benchmarks/netty/src/main/java/bench/: BenchMain.java
benchmarks/rs-netty/: Cargo.toml  README.md
benchmarks/rs-netty/src/: main.rs
benchmarks/tokio/: Cargo.toml  README.md
benchmarks/tokio/src/: main.rs
examples/: echo.rs  http_server.rs  http_websocket_server.rs  tcp_echo_client.rs  tcp_echo_server.rs  tcp_json_line_echo.rs  tcp_lifecycle.rs  tcp_typed_chain.rs  tcp_typed_chain_client.rs  typed_chain.rs  udp_echo_client.rs  udp_echo_server.rs  udp_typed_chain.rs  udp_typed_chain_client.rs  websocket_server.rs
rs-netty-macros/: Cargo.toml
rs-netty-macros/src/: lib.rs
src/: channel.rs  client.rs  context.rs  error.rs  lib.rs  life.rs  server.rs  traits.rs
src/channel/: command.rs  datagram.rs  mod.rs  stream.rs
src/codec/: byte_array.rs  bytes_datagram.rs  delimiter_based_frame.rs  fixed_length_frame.rs  http.rs  json.rs  length_field_based_frame.rs  line.rs  mod.rs  mqtt.rs  utf8_datagram.rs  websocket.rs
src/context/: datagram.rs  info.rs  mod.rs  stats.rs  stream.rs
src/pipeline/: builder.rs  mod.rs  pipe.rs  runtime.rs  state.rs
src/pipeline/core/: mod.rs  pipe.rs  state.rs
src/pipeline/datagram/: builder.rs  runtime.rs
src/pipeline/stream/: builder.rs  runtime.rs
src/transport/: mod.rs  shutdown.rs
src/transport/tcp/: client.rs  config.rs  connection.rs  mod.rs  server.rs
src/transport/udp/: client.rs  config.rs  mod.rs  server.rs  socket.rs
tests/: compile_fail.rs  compile_pass.rs  server_lifecycle.rs
tests/ui/: fail_datagram_final_encoder_mismatch.rs  fail_datagram_final_encoder_mismatch.stderr  fail_datagram_handler_before_codec.rs  fail_datagram_handler_before_codec.stderr  fail_datagram_handler_twice.rs  fail_datagram_handler_twice.stderr  fail_datagram_inbound_after_handler.rs  fail_datagram_inbound_after_handler.stderr  fail_datagram_inbound_before_codec.rs  fail_datagram_inbound_before_codec.stderr  fail_datagram_outbound_before_handler.rs  fail_datagram_outbound_before_handler.stderr  fail_datagram_type_mismatch_inbound_to_handler.rs  fail_datagram_type_mismatch_inbound_to_handler.stderr  fail_datagram_type_mismatch_outbound.rs  fail_datagram_type_mismatch_outbound.stderr  fail_final_encoder_mismatch.rs  fail_final_encoder_mismatch.stderr  fail_handler_before_codec.stderr  fail_handler_twice.rs  fail_handler_twice.stderr  fail_inbound_after_handler.rs  fail_inbound_after_handler.stderr  fail_inbound_before_codec.stderr  fail_outbound_before_handler.stderr  fail_stream_final_encoder_mismatch.stderr  fail_stream_handler_before_codec.rs  fail_stream_handler_before_codec.stderr  fail_stream_handler_twice.stderr  fail_stream_inbound_after_handler.stderr  fail_stream_inbound_before_codec.rs  fail_stream_inbound_before_codec.stderr  fail_stream_outbound_before_handler.rs  fail_stream_outbound_before_handler.stderr  fail_stream_type_mismatch_inbound_to_handler.stderr  fail_stream_type_mismatch_outbound.stderr  fail_tcp_with_datagram_pipeline.rs  fail_tcp_with_datagram_pipeline.stderr  fail_type_mismatch_inbound_to_handler.rs  fail_type_mismatch_inbound_to_handler.stderr  (+16 more)
