[package]
name = "rs-netty"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "A Tokio-native typed TCP/UDP pipeline framework inspired by Netty."
repository = "https://github.com/PieceOfFall/rs-netty"
exclude = [
    ".idea/",
    "Cargo.toml.orig",
]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"
trait-variant = "0.1"

[dev-dependencies]
trybuild = "1"
